--- a/client/styles.css
+++ b/client/styles.css
@@ -1,5 +1,3 @@
-styles.css
-
 input:focus,
 select:focus,
 textarea:focus,
@@ -19,9 +17,29 @@ input.fetchURL {
 
 div.article {
   border: 1px black solid;
+  width: 350px;
+  flex-grow: 1;
+}
+
+div.container {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-content: center;
+  width: 250px;
 }
 
 .inputNewArticle {
   border: 1px black solid;
   width: 350px;
+}
+
+li {
+  list-style-type: none;
+  word-wrap: break-word;
+}
+
+.liSummary {
+  word-wrap: break-word;
+  display: block;
 }
