--- a/client/styles.css
+++ b/client/styles.css
@@ -19,6 +19,8 @@ div.article {
   border: 1px black solid;
   width: 350px;
   flex-grow: 1;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 div.container {
